--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@bobbymannino/svelte-progress": "^2.3.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
+		"@total-typescript/ts-reset": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
