--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"clsx": "^2.0.0",
 		"lucide-svelte": "^0.294.0",
 		"mode-watcher": "^0.1.2",
+		"postcss-preset-env": "^9.3.0",
 		"tailwind-merge": "^2.0.0",
 		"tailwind-variants": "^0.1.18"
 	}
