--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.9.8",
 		"clsx": "^2.0.0",
 		"lucide-svelte": "^0.294.0",
 		"mode-watcher": "^0.1.2",
