--- a/package.json
+++ b/package.json
@@ -1,46 +1,75 @@
 {
 	"name": "advent-of-svelte-2023",
 	"version": "0.0.1",
-	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"knip": "knip",
+		"dev": "vite dev --host --open",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "vite preview --host --open",
+		"test": "npm run test:e2e && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"test:e2e": "playwright test",
+		"test:unit": "vitest -u",
+		"test:unit:ui": "vitest --ui",
+		"migration:generate": "drizzle-kit generate:pg",
+		"migration:push": "drizzle-kit push:pg",
+		"migration:pull": "drizzle-kit introspect:pg",
+		"migration:drop": "drizzle-kit drop",
+		"migration:check": "drizzle-kit check:pg"
 	},
 	"devDependencies": {
 		"@bobbymannino/svelte-progress": "^2.3.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.27.4",
+		"@fontsource/fira-mono": "^4.5.10",
+		"@playwright/test": "^1.40.1",
+		"@sveltejs/adapter-auto": "^2.1.1",
+		"@sveltejs/enhanced-img": "^0.1.5",
+		"@sveltejs/kit": "^1.27.6",
+		"@testing-library/jest-dom": "^6.1.5",
+		"@testing-library/svelte": "^4.0.5",
 		"@total-typescript/ts-reset": "^0.5.1",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.24",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.0.0",
+		"@types/cookie": "^0.5.4",
+		"@types/dompurify": "^3.0.5",
+		"@types/jsdom": "^21.1.6",
+		"@types/node": "^20.10.2",
+		"@types/nodemailer": "^6.4.14",
+		"@typescript-eslint/eslint-plugin": "^6.13.1",
+		"@typescript-eslint/parser": "^6.13.1",
+		"@vitest/ui": "^0.34.6",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"jsdom": "^22.1.0",
+		"knip": "^3.4.0",
+		"postcss": "^8.4.32",
+		"postcss-load-config": "^4.0.2",
+		"prettier": "^3.1.0",
 		"prettier-plugin-tailwindcss": "^0.4.1",
-		"svelte": "5.0.0-next.17",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.3.2",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.2",
+		"sveltekit-superforms": "^1.11.0",
+		"tailwindcss": "^3.3.5",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.2",
+		"vite": "^4.5.0",
+		"vitest": "^0.32.4",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"bits-ui": "^0.9.8",
+		"bits-ui": "^0.9.9",
 		"clsx": "^2.0.0",
+		"dompurify": "^3.0.6",
 		"lucide-svelte": "^0.294.0",
 		"mode-watcher": "^0.1.2",
+		"nodemailer": "^6.9.7",
 		"postcss-preset-env": "^9.3.0",
-		"tailwind-merge": "^2.0.0",
-		"tailwind-variants": "^0.1.18"
+		"svelte-sonner": "^0.3.6",
+		"tailwind-merge": "^2.1.0",
+		"tailwind-variants": "^0.1.18",
+		"vite-plugin-kit-routes": "^0.2.2"
 	}
 }
