--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
+		"svelte-headless-table": "^0.17.7",
 		"sveltekit-superforms": "^1.11.0",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.6.2",
